--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -7,7 +7,7 @@
     text-align: center !important;
 }
 
-html { 
+.background { 
     background-image: url("../../background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
