--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+
 .App {
     display: flex;
     height: 100vh;
